# langample-server

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build-release.yml  deploy-js.yml  deploy-release.yml  deploy-rust.yml  deploy.yml  on-push-main.yml  on-push-master.yml  run-ansible.yml
ansible/: playbook.yaml
backend/: Cargo.toml  README.md  build.gradle.kts
backend/gradle/: libs.versions.toml
backend/src/: app_state.rs  main.rs  util.rs
backend/src/graphql/: query.rs  schema.rs
backend/src/kaikki/: kaikki_proxy.rs  mod.rs
backend/src/llm/: chatgpt.rs  chatgpt_lexical_items.rs  chatgpt_structs.rs  mod.rs
backend/src/main/kotlin/: Application.kt  Routing.kt
backend/src/model/: lexical_item_detail.rs  mod.rs  sentence.rs  translations_set.rs
backend/src/panlex/: mod.rs  panlex_lexical_items.rs  sqlite.rs
backend/src/tatoeba/: mod.rs  tatoeba_proxy.rs
backend/src/wortschatz_leipzig/: mod.rs  wortschatz_leipzig_proxy.rs
cicd/: deploy.py
docker/: docker-compose.yml
docker/langample/: Dockerfile
src/main/kotlin/: Application.kt
src/main/resources/: application.yaml
