[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
async-graphql = { version = "7.0.17", features = ["tracing", "log"] }
async-graphql-axum = "7.0.17"
clap = { version = "4.5.42", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
mockito = "1.7.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tower-http = { version = "0.6.6", features = ["trace"] }
